# fin-part-ord

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
nix/: shell.nix
src/: dag.rs  lib.rs  pairs.rs  trait.rs
